--- a/gallery.html
+++ b/gallery.html
@@ -42,6 +42,14 @@
     <article class="article-gallery">
         <section>
             <div class="caja-imgs" id="gallery">
+                <img src="gallery/HESS cuero 1.webp" alt="Integrantes de HESS">
+                <img src="gallery/HESS Gualeguaychu.webp" alt="Integrantes de HESS">
+                <img src="gallery/HESS Fabio Lione.webp" alt="Integrantes de HESS">
+                <img src="gallery/HESS platos.webp" alt="Integrantes de HESS">
+                <img src="gallery/HESS QSR.webp" alt="Integrantes de HESS">
+                <img src="gallery/Mel y Eric.webp" alt="Integrantes de HESS">
+                <img src="gallery/HESS QSR 2.webp" alt="Integrantes de HESS">
+                <img src="gallery/HESS cuero 2.webp" alt="Integrantes de HESS">
                 <img src="gallery/hesscasa.webp" alt="Integrantes de HESS">
                 <img src="gallery/hess2g11.webp" alt="Integrantes de HESS en vivo">
                 <img src="gallery/melaniyeric.webp" alt="Cantante Melani Hess ">
