--- a/index.html
+++ b/index.html
@@ -42,17 +42,25 @@
 
     <aside class="aside">
         <div class="aside-title">
-            <h2><a href="shows.html">LATEST SHOWS</a></h2>
+            <h2><a href="shows.html">HESS SHOWS</a></h2>
         </div>
 
         <div class="cartas-aside">
-            <h2>ODISSEA + HESS + SILVERHEART</h2>
+            <h2>FOXY VEGAS + DOMINATION + HESS</h2>
             <div class="img-cartas">
-                <a href="shows.html"><img src="assets/hessg112.webp" alt=""></a>
+                <a href="shows.html"><img src="assets/Hess gualeguaychu.jpg" alt=""></a>
             </div>
-            <p>01-06-24</p>
-            <p>El sábado 01 de junio del 2024 estuvimos presentes en el famoso "GALPÓN DE LA MÚSICA"
-                en Rosario junto a ODDISEA y a SILVERHEART que presentaba su nuevo material.</p>
+            <p>28-12-24</p>
+            <p>Hemos viajado a la hermosa ciudad de Gualeguaychú para compartir escenario con 2 bandas espectaculares, y hemos regresado a casa con nuevos amigos y colegas del metal.</p>
+        </div>
+
+        <div class="cartas-aside">
+            <h2>HESS + ULNEASH THE BEAST + FABIO LIONE</h2>
+            <div class="img-cartas">
+                <a href="shows.html"><img src="assets/HESS - Fabio Lione.jpg" alt=""></a>
+            </div>
+            <p>20-11-24</p>
+            <p>Fue un verdadero honor para nosotros poder compartir escenario con el señon Fabio Lione.</p>
         </div>
 
         <div class="cartas-aside">
@@ -87,17 +95,6 @@
         </div>
 
         <div class="cartas-aside">
-            <h2>HESS + LORD DIVINE</h2>
-            <div class="img-cartas">
-                <a href="shows.html"><img src="assets//hess-lord.webp" alt=""></a>
-            </div>
-            <p>05-05-23</p>
-            <p>Estamos muy emocionados de anunciar nuestra primera fecha del 2023!!
-                HESS junto a LORD DIVINE en Rosario!
-                Viernes 5 de mayo en el Complejo Cultural Atlas (Mitre 645)</p>
-        </div>
-
-        <div class="cartas-aside">
             <h2>SCAN ME</h2>
             <div class="img-cartas">
                 <a href="https://www.instagram.com/hessheavymetal/?hl=es-la" target="_blank"><img src="assets/QR.webp" alt=""></a>
@@ -114,6 +111,19 @@
             <div class="hess">
                 <h1>HESS</h1>
                 <p>HESS is a Traditional Heavy Metal band "NWOTHM" from Rosario, Argentina</p>
+            </div>
+
+            <div class="cartas">
+                <h2>No to violence</h2>
+                <div class="img-cartas">
+                    <img src="assets/HESS cuero 1.webp" alt="">
+                </div>
+                <p>Hess is against violence in Rosario
+                    <br>
+                    ---------
+                    <br>
+                    HESS está totalmente en contra de la violencia en Rosario.
+                </p>
             </div>
 
             <div class="cartas">
@@ -153,15 +163,16 @@
                 <div class="img-cartas">
                     <img src="assets/diego.webp" alt="">
                 </div>
-                <p>Queremos anunciar con mucho pesar que Diego "Chimi" Schmidhalter no va a seguir siendo parte de la
-                    banda. Le deseamos muchos éxitos en su proyecto futuro y le agradecemos todos estos años llenos de
-                    música y amistad.
-                    <br>
-                    ---------
-                    <br>
+                <p>
                     We are deeply sorry to announce that Diego "Chimi" Schmidhalter will no longer be found among the
                     Hessian ranks. We wish him all the best in his future endeavours and thank him for all these years
                     of music and friendship.
+                    <br>
+                    ---------
+                    <br>
+                    Queremos anunciar con mucho pesar que Diego "Chimi" Schmidhalter no va a seguir siendo parte de la
+                    banda. Le deseamos muchos éxitos en su proyecto futuro y le agradecemos todos estos años llenos de
+                    música y amistad.
                 </p>
             </div>
 
