--- a/melanihess.html
+++ b/melanihess.html
@@ -75,7 +75,7 @@
             </div>
 
             <div class="melani-history">
-                <h3>History</h3>
+                <h3>HESStory</h3>
                 <p>At the beginning of her singing career, her soprano singing influences were mainly Lucia Popp, Yma
                     Sumac, Maria Callas
 
