--- a/shows.html
+++ b/shows.html
@@ -79,8 +79,8 @@
                 <div class="img-cartas">
                     <img src="assets/HESS  - EL LEGADO.jpg" alt="">
                 </div>
-                <p>09-11-24</p>
-                <p>Un pequeño viaje hasta Villa Constitución para volver a rockear! Esta vez con los amigos de Lord Divine y la banda EL LEGADO de Javier Barroso.p>
+                <p>09-12-24</p>
+                <p>Un pequeño viaje hasta Villa Constitución para volver a rockear! Esta vez con los amigos de Lord Divine y la banda "EL LEGADO" de Javier Barroso.p>
             </div>
 
             <div class="cartas">
@@ -108,9 +108,9 @@
                     <img src="assets/hessquesearock.webp" alt="">
                 </div>
                 <p>27-04-24</p>
-                <p>El sábado 27 de abril del 2024 vinieron los chicos de INNERFORCE desde Bs As a
-                    compartir escenario con nosotros, donde también estuvieron presentes los chicos de UNDER THE SILENCE
-                    en el bar QUE SEA ROCK - Rosario</p>
+                <p>El sábado 27 de abril del 2024 vinieron los amigos de INNERFORCE desde Bs.As. a
+                    compartir escenario con nosotros, donde también estuvieron presentes los hermanos de UNDER THE SILENCE
+                    en el bar "QUE SEA ROCK" - Rosario</p>
             </div>
 
             <div class="cartas">
