--- a/biography.html
+++ b/biography.html
@@ -304,7 +304,7 @@
                     class="iconos" alt="..."></a>
             <a target="_blank" title="Youtube" href="https://www.youtube.com/channel/UCB5CIpTEuIAbZ2NzVSkyFyw"><img
                     src="icons/youtube.webp" class="iconos" alt="..."></a>
-            <a target="_blank" title="Bandcamp" href="https://hessheavymetal.bandcamp.com/album/harpokrates"><img
+            <a target="_blank" title="Bandcamp" href="https://hessheavymetal.bandcamp.com/"><img
                     src="icons/bandcamp.webp" class="iconos" alt="..."></a>
             <a target="_blank" title="Facebook" href="https://es-la.facebook.com/HESSHeavyMetal/"><img
                     src="icons/facebook.webp" class="iconos" alt="..."></a>
@@ -313,7 +313,7 @@
             <a target="_blank" title="Amazon" href="https://www.amazon.com/Harpokrates-Hess/dp/B07V9WD6N1"><img
                     src="icons/amazon.webp" class="iconos" alt="..."></a>
             <a target="_blank" title="Youtube Music"
-                href="https://music.youtube.com/playlist?list=OLAK5uy_lM6nrbJg8Wyn3Ne0PUOV85aih67XMWTSs"><img
+                href="https://music.youtube.com/channel/UCB5CIpTEuIAbZ2NzVSkyFyw"><img
                     src="icons/youtube_music.webp" class="iconos" alt="..."></a>
             <a target="_blank" title="Apple" href="https://music.apple.com/us/album/harpokrates/1473158711"><img
                     src="icons/apple.webp" class="iconos" alt="..."></a>
