--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a href="shows.html"><img src="assets/Hess gualeguaychu.jpg" alt=""></a>
             </div>
             <p>28-12-24</p>
-            <p>Hemos viajado a la hermosa ciudad de Gualeguaychú para compartir escenario con 2 bandas espectaculares, y hemos regresado a casa con nuevos amigos y colegas del metal.</p>
+            <p>Hemos viajado a la hermosa ciudad de Gualeguaychú - Entre Ríos, para compartir escenario con 2 bandas espectaculares, y hemos regresado a casa con muy buenos amigos y colegas del metal.</p>
         </div>
 
         <div class="cartas-aside">
@@ -69,8 +69,8 @@
                 <a href="shows.html"><img src="assets//hessquesearock.webp" alt=""></a>
             </div>
             <p>27-04-2024</p>
-            <p>Queremos anunciarles que el sábado 27 de abril del 2024 vienen los chicos de INNERFORCE desde Bs As a
-                compartir escenario con nosotros, donde también se harán presentes los chicos de UNDER THE SILENCE
+            <p>El sábado 27 de abril del 2024 vinieron los chicos de INNERFORCE desde Bs As a
+                compartir escenario con nosotros, donde también se hicieron presentes los chicos de UNDER THE SILENCE
                 en el bar QUE SEA ROCK - Rosario</p>
         </div>
 
@@ -79,8 +79,8 @@
             <div class="img-cartas">
                 <a href="shows.html"><img src="assets//riot.webp" alt=""></a>
             </div>
-            <p>29-12-23</p>
-            <p>Nos enorgullece anunciar que seremos teloneros de esta gran banda Canadiense se Power Metal, el 9 de
+            <p>09-12-23</p>
+            <p>Nos enorgullece anunciar que fuimos teloneros de esta gran banda Canadiense se Power Metal, el 9 de
                 diciembre del 2023 en el Club Cultural BULA - Bs As..</p>
         </div>
 
@@ -110,7 +110,7 @@
         <section class="index-section">
             <div class="hess">
                 <h1>HESS</h1>
-                <p>HESS is a Traditional Heavy Metal band "NWOTHM" from Rosario, Argentina</p>
+                <p>A Traditional Heavy Metal band "NWOTHM" from Rosario, Argentina</p>
             </div>
 
             <div class="cartas">
@@ -123,20 +123,6 @@
                     ---------
                     <br>
                     HESS está totalmente en contra de la violencia en Rosario.
-                </p>
-            </div>
-
-            <div class="cartas">
-                <h2>Darío Dorigo</h2>
-                <div class="img-cartas">
-                    <img src="assets/darioperacion.webp" alt="">
-                </div>
-                <p>We want to announce that the surgery performed on our drummer Darío Dorigo was successful. 🤘
-                    <br>
-                    ---------
-                    <br>
-                    Queremos anunciarles que la cirugía que le hicieron a nuestro baterista Darío Dorigo salió exitosa.
-                    🤘
                 </p>
             </div>
 
@@ -182,7 +168,7 @@
                     <img src="assets/aeon.webp" alt="">
                 </div>
                 <p>EP COMING OUT 27th NOVEMBER ON ALL DIGITAL PLATFORMS
-                    Aeon Of Ma'at [Part 1] is the first one in a series of three 3-song EPs which will then be compiled
+                    Aeon Of Ma'at "PART ONE" is the first one in a series of three 3-song EPs which will then be compiled
                     in
                     one LP to be called Heka. God of Gods. Creator of all that was, is, and will be. We are by his
                     breath.
@@ -192,12 +178,9 @@
                     ---------
                     <br>
                     LANZAMIENTO DE EP EL 27 DE NOVIEMBRE EN TODAS LAS PLATAFORMAS DIGITALES
-                    Aeon Of Ma'at [Part 1] es el primero de una serie de tres EPs con tres temas cada uno, los cuales
-                    serán
-                    parte del futuro LP que se llamará Heka. Dios de Dioses. Creador de todo lo que fue, es y será.
-                    Nacemos
+                    Aeon Of Ma'at "PART ONE" es el primero de una serie de tres EPs con tres temas cada uno, los cuales
+                    serán parte del futuro LP que se llamará Heka. Dios de Dioses. Creador de todo lo que fue, es y será. Nacemos
                     de su aliento. No vamos a él, sino que es él quien viene.
-                    ¡Atentos al lanzamiento!
                 </p>
             </div>
 
@@ -206,13 +189,13 @@
                 <div class="img-cartas">
                     <img src="assets//NEW-DRUMMER.webp" alt="">
                 </div>
-                <p>We are pleased to announce our new drummer, Darío Dorigo!Let’s give him a warm heavy metal
+                <p>We are pleased to announce our new drummer, Darío Dorigo! Let’s give him a warm heavy metal
                     welcome.Cheers, Hessians!🤘
                     <br>
                     ---------
                     <br>
-                    Nos alegra anunciar a nuestro nuevo batero, Darío Dorigo!Démosle una
-                    cálida bienvenida de metal.¡Saludos, hessianos! 🤘
+                    Nos alegra anunciar a nuestro nuevo batero, Darío Dorigo! Démosle una
+                    cálida bienvenida de metal. ¡Saludos, hessianos! 🤘
                 </p>
             </div>
 
@@ -273,7 +256,7 @@
                     class="iconos" alt="..."></a>
             <a target="_blank" title="Youtube" href="https://www.youtube.com/channel/UCB5CIpTEuIAbZ2NzVSkyFyw"><img
                     src="icons/youtube.webp" class="iconos" alt="..."></a>
-            <a target="_blank" title="Bandcamp" href="https://hessheavymetal.bandcamp.com/album/harpokrates"><img
+            <a target="_blank" title="Bandcamp" href="https://hessheavymetal.bandcamp.com/"><img
                     src="icons/bandcamp.webp" class="iconos" alt="..."></a>
             <a target="_blank" title="Facebook" href="https://es-la.facebook.com/HESSHeavyMetal/"><img
                     src="icons/facebook.webp" class="iconos" alt="..."></a>
@@ -282,7 +265,7 @@
             <a target="_blank" title="Amazon" href="https://www.amazon.com/Harpokrates-Hess/dp/B07V9WD6N1"><img
                     src="icons/amazon.webp" class="iconos" alt="..."></a>
             <a target="_blank" title="Youtube Music"
-                href="https://music.youtube.com/playlist?list=OLAK5uy_lM6nrbJg8Wyn3Ne0PUOV85aih67XMWTSs"><img
+                href="https://music.youtube.com/channel/UCB5CIpTEuIAbZ2NzVSkyFyw"><img
                     src="icons/youtube_music.webp" class="iconos" alt="..."></a>
             <a target="_blank" title="Apple" href="https://music.apple.com/us/album/harpokrates/1473158711"><img
                     src="icons/apple.webp" class="iconos" alt="..."></a>
