--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
             <div class="dropdown boton">
                 <button class="dropbtn" aria-label="dropdown button"></button>
                 <div class="h3">
-                    <h3>LINKS</h3>
+                    <h3>Browse</h3>
                 </div>
                 <div class="dropdown-content">
                     <a class="nav-link wolfsbane" href="index.html">Home</a>
+                    <a class="nav-link wolfsbane" href="biography.html">Biography</a>
+                    <a class="nav-link wolfsbane" href="band.html">Band Members</a>
+                    <a class="nav-link wolfsbane" href="music.html">Music</a>
+                    <a class="nav-link wolfsbane" href="lyrics.html">Lyrics</a>
+                    <a class="nav-link wolfsbane" href="gallery.html">Gallery</a>
+                    <a class="nav-link wolfsbane" href="videos.html">Videos</a>
                     <a class="nav-link wolfsbane" href="shows.html">LIVE SHOWS</a>
                     <a class="nav-link wolfsbane" href="interviews.html">Interviews</a>
                     <a class="nav-link wolfsbane" href="reviews.html">Reviews</a>
-                    <a class="nav-link wolfsbane" href="music.html">Music</a>
-                    <a class="nav-link wolfsbane" href="biography.html">Biography</a>
-                    <a class="nav-link wolfsbane" href="gallery.html">Gallery</a>
-                    <a class="nav-link wolfsbane" href="lyrics.html">Lyrics</a>
                     <a class="nav-link wolfsbane" href="melanihess.html">Melani Hess</a>
-                    <a class="nav-link wolfsbane" href="band.html">Band Members</a>
-                    <a class="nav-link wolfsbane" href="videos.html">Videos</a>
                 </div>
             </div>
         </div>
@@ -109,8 +109,8 @@
     <article>
         <section class="index-section">
             <div class="hess">
-                <h1>HESS</h1>
-                <p>A Traditional Heavy Metal band "NWOTHM" from Rosario, Argentina</p>
+                <h1>HESS i a NWOTHM band from Rosario, Argentina.</h1>
+                <!-- <p>A Traditional Heavy Metal band "NWOTHM" from Rosario, Argentina</p> -->
             </div>
 
             <div class="cartas">
@@ -118,11 +118,11 @@
                 <div class="img-cartas">
                     <img src="assets/HESS cuero 1.webp" alt="">
                 </div>
-                <p>Hess is against violence in Rosario
+                <p>Hess is against violence.
                     <br>
                     ---------
                     <br>
-                    HESS está totalmente en contra de la violencia en Rosario.
+                    HESS está totalmente en contra de la violencia.
                 </p>
             </div>
 
@@ -189,7 +189,7 @@
                 <div class="img-cartas">
                     <img src="assets//NEW-DRUMMER.webp" alt="">
                 </div>
-                <p>We are pleased to announce our new drummer, Darío Dorigo! Let’s give him a warm heavy metal
+                <p>We are pleased to announce our new drummer, Darío Dorigo! Let's give him a warm heavy metal
                     welcome.Cheers, Hessians!🤘
                     <br>
                     ---------
@@ -216,7 +216,7 @@
                 <div class="img-cartas">
                     <img src="assets//hess-teespring.webp" alt="">
                 </div>
-                <p>As promised, after several requests, we’ve finally set up our online store on Teespring! Are you
+                <p>As promised, after several requests, we've finally set up our online store on Teespring! Are you
                     looking for tees, hoodies or tank tops? Take a peek!
                     <br>
                     <a href="https://teespring.com/es/stores/hess-heavy-metal-2" target="_blank">👉Here</a>
@@ -231,7 +231,7 @@
                 <div class="img-cartas">
                     <img src="assets//hess-10-años.webp" alt="">
                 </div>
-                <p>Happy birthday to us! We’ve got many surprises for you, our dear Hessians! Stay tuned!
+                <p>Happy birthday to us! We've got many surprises for you, our dear Hessians! Stay tuned!
                     FULL VIDEO ON YOUTUBE
                     <br>
                     <a href="https://www.youtube.com/watch?v=uaQDLh-8A7s" target="_blank">👉Here</a>
