--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <article>
         <section class="index-section">
             <div class="hess">
-                <h1>HESS i a NWOTHM band from Rosario, Argentina.</h1>
+                <h1>HESS is a NWOTHM band from Rosario, Argentina.</h1>
                 <!-- <p>A Traditional Heavy Metal band "NWOTHM" from Rosario, Argentina</p> -->
             </div>
 
