--- a/melanihess.html
+++ b/melanihess.html
@@ -15,20 +15,20 @@
             <div class="dropdown boton">
                 <button class="dropbtn" aria-label="dropdown button"></button>
                 <div class="h3">
-                    <h3>LINKS</h3>
+                    <h3>Browse</h3>
                 </div>
                 <div class="dropdown-content">
                     <a class="nav-link wolfsbane" href="index.html">Home</a>
+                    <a class="nav-link wolfsbane" href="biography.html">Biography</a>
+                    <a class="nav-link wolfsbane" href="band.html">Band Members</a>
+                    <a class="nav-link wolfsbane" href="music.html">Music</a>
+                    <a class="nav-link wolfsbane" href="lyrics.html">Lyrics</a>
+                    <a class="nav-link wolfsbane" href="gallery.html">Gallery</a>
+                    <a class="nav-link wolfsbane" href="videos.html">Videos</a>
                     <a class="nav-link wolfsbane" href="shows.html">LIVE SHOWS</a>
                     <a class="nav-link wolfsbane" href="interviews.html">Interviews</a>
                     <a class="nav-link wolfsbane" href="reviews.html">Reviews</a>
-                    <a class="nav-link wolfsbane" href="music.html">Music</a>
-                    <a class="nav-link wolfsbane" href="biography.html">Biography</a>
-                    <a class="nav-link wolfsbane" href="gallery.html">Gallery</a>
-                    <a class="nav-link wolfsbane" href="lyrics.html">Lyrics</a>
                     <a class="nav-link wolfsbane" href="melanihess.html">Melani Hess</a>
-                    <a class="nav-link wolfsbane" href="band.html">Band Members</a>
-                    <a class="nav-link wolfsbane" href="videos.html">Videos</a>
                 </div>
             </div>
         </div>
