--- a/music.html
+++ b/music.html
@@ -15,19 +15,20 @@
             <div class="dropdown boton">
                 <button class="dropbtn" aria-label="dropdown button"></button>
                 <div class="h3">
-                    <h3>LINKS</h3>
-                </div>                <div class="dropdown-content">
+                    <h3>Browse</h3>
+                </div>
+                <div class="dropdown-content">
                     <a class="nav-link wolfsbane" href="index.html">Home</a>
+                    <a class="nav-link wolfsbane" href="biography.html">Biography</a>
+                    <a class="nav-link wolfsbane" href="band.html">Band Members</a>
+                    <a class="nav-link wolfsbane" href="music.html">Music</a>
+                    <a class="nav-link wolfsbane" href="lyrics.html">Lyrics</a>
+                    <a class="nav-link wolfsbane" href="gallery.html">Gallery</a>
+                    <a class="nav-link wolfsbane" href="videos.html">Videos</a>
                     <a class="nav-link wolfsbane" href="shows.html">LIVE SHOWS</a>
                     <a class="nav-link wolfsbane" href="interviews.html">Interviews</a>
                     <a class="nav-link wolfsbane" href="reviews.html">Reviews</a>
-                    <a class="nav-link wolfsbane" href="music.html">Music</a>
-                    <a class="nav-link wolfsbane" href="biography.html">Biography</a>
-                    <a class="nav-link wolfsbane" href="gallery.html">Gallery</a>
-                    <a class="nav-link wolfsbane" href="lyrics.html">Lyrics</a>
                     <a class="nav-link wolfsbane" href="melanihess.html">Melani Hess</a>
-                    <a class="nav-link wolfsbane" href="band.html">Band Members</a>
-                    <a class="nav-link wolfsbane" href="videos.html">Videos</a>
                 </div>
             </div>
         </div>
@@ -35,17 +36,25 @@
 
     <aside class="aside">
         <div class="aside-title">
-            <h2><a href="shows.html">LATEST SHOWS</a></h2>
+            <h2><a href="shows.html">HESS SHOWS</a></h2>
         </div>
 
         <div class="cartas-aside">
-            <h2>ODISSEA + HESS + SILVERHEART</h2>
+            <h2>FOXY VEGAS + DOMINATION + HESS</h2>
             <div class="img-cartas">
-                <a href="shows.html"><img src="assets/hessg112.webp" alt=""></a>
+                <a href="shows.html"><img src="assets/Hess gualeguaychu.jpg" alt=""></a>
             </div>
-            <p>01-06-24</p>
-            <p>El sábado 01 de junio del 2024 estuvimos presentes en el famoso "GALPÓN DE LA MÚSICA"
-                en Rosario junto a ODDISEA y a SILVERHEART que presentaba su nuevo material.</p>
+            <p>28-12-24</p>
+            <p>Hemos viajado a la hermosa ciudad de Gualeguaychú - Entre Ríos, para compartir escenario con 2 bandas espectaculares, y hemos regresado a casa con muy buenos amigos y colegas del metal.</p>
+        </div>
+
+        <div class="cartas-aside">
+            <h2>HESS + ULNEASH THE BEAST + FABIO LIONE</h2>
+            <div class="img-cartas">
+                <a href="shows.html"><img src="assets/HESS - Fabio Lione.jpg" alt=""></a>
+            </div>
+            <p>20-11-24</p>
+            <p>Fue un verdadero honor para nosotros poder compartir escenario con el señon Fabio Lione.</p>
         </div>
 
         <div class="cartas-aside">
@@ -54,8 +63,8 @@
                 <a href="shows.html"><img src="assets//hessquesearock.webp" alt=""></a>
             </div>
             <p>27-04-2024</p>
-            <p>Queremos anunciarles que el sábado 27 de abril del 2024 vienen los chicos de INNERFORCE desde Bs As a
-                compartir escenario con nosotros, donde también se harán presentes los chicos de UNDER THE SILENCE
+            <p>El sábado 27 de abril del 2024 vinieron los chicos de INNERFORCE desde Bs As a
+                compartir escenario con nosotros, donde también se hicieron presentes los chicos de UNDER THE SILENCE
                 en el bar QUE SEA ROCK - Rosario</p>
         </div>
 
@@ -64,8 +73,8 @@
             <div class="img-cartas">
                 <a href="shows.html"><img src="assets//riot.webp" alt=""></a>
             </div>
-            <p>29-12-23</p>
-            <p>Nos enorgullece anunciar que seremos teloneros de esta gran banda Canadiense se Power Metal, el 9 de
+            <p>09-12-23</p>
+            <p>Nos enorgullece anunciar que fuimos teloneros de esta gran banda Canadiense se Power Metal, el 9 de
                 diciembre del 2023 en el Club Cultural BULA - Bs As..</p>
         </div>
 
@@ -77,17 +86,6 @@
             <p>01-12-23</p>
             <p>Noche inolvidable compartiendo fecha con el gran Claudio Tano Marciello
             </p>
-        </div>
-
-        <div class="cartas-aside">
-            <h2>HESS + LORD DIVINE</h2>
-            <div class="img-cartas">
-                <a href="shows.html"><img src="assets//hess-lord.webp" alt=""></a>
-            </div>
-            <p>05-05-23</p>
-            <p>Estamos muy emocionados de anunciar nuestra primera fecha del 2023!!
-                HESS junto a LORD DIVINE en Rosario!
-                Viernes 5 de mayo en el Complejo Cultural Atlas (Mitre 645)</p>
         </div>
 
         <div class="cartas-aside">
