--- a/videos.html
+++ b/videos.html
@@ -13,19 +13,20 @@
             <div class="dropdown boton">
                 <button class="dropbtn" aria-label="dropdown button"></button>
                 <div class="h3">
-                    <h3>LINKS</h3>
-                </div>                <div class="dropdown-content">
+                    <h3>Browse</h3>
+                </div>
+                <div class="dropdown-content">
                     <a class="nav-link wolfsbane" href="index.html">Home</a>
+                    <a class="nav-link wolfsbane" href="biography.html">Biography</a>
+                    <a class="nav-link wolfsbane" href="band.html">Band Members</a>
+                    <a class="nav-link wolfsbane" href="music.html">Music</a>
+                    <a class="nav-link wolfsbane" href="lyrics.html">Lyrics</a>
+                    <a class="nav-link wolfsbane" href="gallery.html">Gallery</a>
+                    <a class="nav-link wolfsbane" href="videos.html">Videos</a>
                     <a class="nav-link wolfsbane" href="shows.html">LIVE SHOWS</a>
                     <a class="nav-link wolfsbane" href="interviews.html">Interviews</a>
                     <a class="nav-link wolfsbane" href="reviews.html">Reviews</a>
-                    <a class="nav-link wolfsbane" href="music.html">Music</a>
-                    <a class="nav-link wolfsbane" href="biography.html">Biography</a>
-                    <a class="nav-link wolfsbane" href="gallery.html">Gallery</a>
-                    <a class="nav-link wolfsbane" href="lyrics.html">Lyrics</a>
                     <a class="nav-link wolfsbane" href="melanihess.html">Melani Hess</a>
-                    <a class="nav-link wolfsbane" href="band.html">Band Members</a>
-                    <a class="nav-link wolfsbane" href="videos.html">Videos</a>
                 </div>
             </div>
         </div>
@@ -39,7 +40,7 @@
             <div class="videos">
 
                 <div class="know">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/lno02ZfMowM?si=K8UaGUGlxoUJ-i3n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/__UZASnQCNg?si=ExFRCU0bm9wTWi8G" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
 
                 <div class="hall">
