arreglos de tañaños 020225

--- a/band.html
+++ b/band.html
@@ -72,7 +72,7 @@
     <article>
         <section>
             <div class="carta-band-members">
-                <img src="assets/hesssala1.webp" alt="">
+                <img src="assets/Hess gualeguaychu costa.webp" alt="">
             </div>
 
             <div class="antiguos">
