--- a/lyrics.html
+++ b/lyrics.html
@@ -39,7 +39,6 @@
     </div>
     <article>
         <section class="section-lyrics">
-
             <div class="king">
                 <div class="english-lyrics">
                     <h3 class="english-lyrics-h3">KING AIWASS</h3>
@@ -1034,8 +1033,8 @@
             <a target="_blank" title="Amazon" href="https://www.amazon.com/Harpokrates-Hess/dp/B07V9WD6N1"><img
                     src="icons/amazon.webp" class="iconos" alt="..."></a>
             <a target="_blank" title="Youtube Music"
-                href="https://music.youtube.com/channel/UCB5CIpTEuIAbZ2NzVSkyFyw"><img
-                    src="icons/youtube_music.webp" class="iconos" alt="..."></a>
+                href="https://music.youtube.com/channel/UCB5CIpTEuIAbZ2NzVSkyFyw"><img src="icons/youtube_music.webp"
+                    class="iconos" alt="..."></a>
             <a target="_blank" title="Apple" href="https://music.apple.com/us/album/harpokrates/1473158711"><img
                     src="icons/apple.webp" class="iconos" alt="..."></a>
             <!-- <a target="_blank" title="Twitter"
