--- a/videos.html
+++ b/videos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -112,12 +112,8 @@
                     src="icons/youtube_music.webp" class="iconos" alt="..."></a>
             <a target="_blank" title="Apple" href="https://music.apple.com/us/album/harpokrates/1473158711"><img
                     src="icons/apple.webp" class="iconos" alt="..."></a>
-            <!-- <a target="_blank" title="Twitter"
-                href="https://twitter.com/i/flow/login?redirect_after_login=%2Fhessheavymetal"><img
-                    src="icons/twitter.webp" class="iconos" alt="..."></a> -->
             <a target="_blank" title="Deezer" href="https://www.deezer.com/sl/album/103779192"><img
                     src="icons/deezer.webp" class="iconos" alt="..."></a>
-            <!-- <a target="_blank" title="Paypal" href="STORE"><img src="icons/paypal.webp" class="iconos" alt="..."></a> -->
         </div>
 
         <div class="home"><a href="#nav">
@@ -125,5 +121,177 @@
             </a></div>
     </footer>
     
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>videos</title>
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" href="videos.css">
+</head>
+<body id="body">
+    <nav class="navegador">
+        <div id="nav" class="nav">
+            <div class="dropdown boton">
+                <button class="dropbtn" aria-label="dropdown button"></button>
+                <div class="h3">
+                    <h3>Browse</h3>
+                </div>
+                <div class="dropdown-content">
+                    <a class="nav-link wolfsbane" href="index.html">Home</a>
+                    <a class="nav-link wolfsbane" href="biography.html">Biography</a>
+                    <a class="nav-link wolfsbane" href="band.html">Band Members</a>
+                    <a class="nav-link wolfsbane" href="music.html">Music</a>
+                    <a class="nav-link wolfsbane" href="lyrics.html">Lyrics</a>
+                    <a class="nav-link wolfsbane" href="gallery.html">Gallery</a>
+                    <a class="nav-link wolfsbane" href="videos.html">Videos</a>
+                    <a class="nav-link wolfsbane" href="shows.html">LIVE SHOWS</a>
+                    <a class="nav-link wolfsbane" href="interviews.html">Interviews</a>
+                    <a class="nav-link wolfsbane" href="reviews.html">Reviews</a>
+                    <a class="nav-link wolfsbane" href="melanihess.html">Melani Hess</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <article>
+        <div class="hess">
+            <h1>VIDEOS</h1>
+        </div>
+        <section>
+            <div class="videos">
+                <div class="know">
+                    <div class="video-container" data-video-id="__UZASnQCNg">
+                        <img src="https://img.youtube.com/vi/__UZASnQCNg/hqdefault.jpg" alt="Video Thumbnail">
+                        <button class="play-button">Play</button>
+                    </div>
+                </div>
+
+                <div class="hall">
+                    <div class="video-container" data-video-id="TYQDaCltL30">
+                        <img src="https://img.youtube.com/vi/TYQDaCltL30/hqdefault.jpg" alt="Video Thumbnail">
+                        <button class="play-button">Play</button>
+                    </div>
+                </div>
+
+                <div class="priests">
+                    <div class="video-container" data-video-id="BtP74WrVMA4">
+                        <img src="https://img.youtube.com/vi/BtP74WrVMA4/hqdefault.jpg" alt="Video Thumbnail">
+                        <button class="play-button">Play</button>
+                    </div>
+                </div>
+
+                <div class="heroes">
+                    <div class="video-container" data-video-id="SGC963CSvRE">
+                        <img src="https://img.youtube.com/vi/SGC963CSvRE/hqdefault.jpg" alt="Video Thumbnail">
+                        <button class="play-button">Play</button>
+                    </div>
+                </div>
+
+                <div class="chaos">
+                    <div class="video-container" data-video-id="RJb1Go-fr5g">
+                        <img src="https://img.youtube.com/vi/RJb1Go-fr5g/hqdefault.jpg" alt="Video Thumbnail">
+                        <button class="play-button">Play</button>
+                    </div>
+                </div>
+
+                <div class="atlantean">
+                    <div class="video-container" data-video-id="GVx_qv1qV-w">
+                        <img src="https://img.youtube.com/vi/GVx_qv1qV-w/hqdefault.jpg" alt="Video Thumbnail">
+                        <button class="play-button">Play</button>
+                    </div>
+                </div>
+
+                <div class="king">
+                    <div class="video-container" data-video-id="OyPhjXRzTzo">
+                        <img src="https://img.youtube.com/vi/OyPhjXRzTzo/hqdefault.jpg" alt="Video Thumbnail">
+                        <button class="play-button">Play</button>
+                    </div>
+                </div>
+
+                <div class="caught">
+                    <div class="video-container" data-video-id="qjgzb3E5A1Q">
+                        <img src="https://img.youtube.com/vi/qjgzb3E5A1Q/hqdefault.jpg" alt="Video Thumbnail">
+                        <button class="play-button">Play</button>
+                    </div>
+                </div>
+
+                <div class="anniversary">
+                    <div class="video-container" data-video-id="uaQDLh-8A7s">
+                        <img src="https://img.youtube.com/vi/uaQDLh-8A7s/hqdefault.jpg" alt="Video Thumbnail">
+                        <button class="play-button">Play</button>
+                    </div>
+                </div>
+
+                <div class="clarisse">
+                    <div class="video-container" data-video-id="xEeU67j7w_8">
+                        <img src="https://img.youtube.com/vi/xEeU67j7w_8/hqdefault.jpg" alt="Video Thumbnail">
+                        <button class="play-button">Play</button>
+                    </div>
+                </div>
+                <!-- Repite para los demás videos -->
+            </div>
+        </section>
+    </article>
+
+    <footer>
+        <div class="copyright">
+            <h2 class="ekm">Created by - EK Metal - 2024</h2>
+        </div>
+
+        <div class="iconos">
+            <a target="_blank" title="Instagram" href="https://www.instagram.com/hessheavymetal/?hl=es-la"><img
+                    src="icons/Instagram.webp" class="iconos" alt="INSTAGRAM"></a>
+            <a target="_blank" title="Spotify"
+                href="https://open.spotify.com/intl-es/artist/5r3GytWIwcRavZ0uF3tCWn"><img src="icons/spotify.webp"
+                    class="iconos" alt="..."></a>
+            <a target="_blank" title="Youtube" href="https://www.youtube.com/channel/UCB5CIpTEuIAbZ2NzVSkyFyw"><img
+                    src="icons/youtube.webp" class="iconos" alt="..."></a>
+            <a target="_blank" title="Bandcamp" href="https://hessheavymetal.bandcamp.com/"><img
+                    src="icons/bandcamp.webp" class="iconos" alt="..."></a>
+            <a target="_blank" title="Facebook" href="https://es-la.facebook.com/HESSHeavyMetal/"><img
+                    src="icons/facebook.webp" class="iconos" alt="..."></a>
+            <a target="_blank" title="Teespring" href="https://teespring.com/es/stores/hess-heavy-metal-2"><img
+                    src="icons/teespring.webp" class="iconos" alt="..."></a>
+            <a target="_blank" title="Amazon" href="https://www.amazon.com/Harpokrates-Hess/dp/B07V9WD6N1"><img
+                    src="icons/amazon.webp" class="iconos" alt="..."></a>
+            <a target="_blank" title="Youtube Music"
+                href="https://music.youtube.com/channel/UCB5CIpTEuIAbZ2NzVSkyFyw"><img
+                    src="icons/youtube_music.webp" class="iconos" alt="..."></a>
+            <a target="_blank" title="Apple" href="https://music.apple.com/us/album/harpokrates/1473158711"><img
+                    src="icons/apple.webp" class="iconos" alt="..."></a>
+            <a target="_blank" title="Deezer" href="https://www.deezer.com/sl/album/103779192"><img
+                    src="icons/deezer.webp" class="iconos" alt="..."></a>
+        </div>
+
+        <div class="home"><a href="#nav">
+                <h3>. : Home : .</h3>
+            </a></div>
+    </footer>
+    
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var videoContainers = document.querySelectorAll('.video-container');
+            videoContainers.forEach(function (container) {
+                var button = container.querySelector('.play-button');
+                button.addEventListener('click', function () {
+                    var videoId = container.getAttribute('data-video-id');
+                    var iframe = document.createElement('iframe');
+                    iframe.setAttribute('width', '560');
+                    iframe.setAttribute('height', '315');
+                    iframe.setAttribute('src', 'https://www.youtube.com/embed/' + videoId + '?autoplay=1');
+                    iframe.setAttribute('frameborder', '0');
+                    iframe.setAttribute('allow', 'accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share');
+                    iframe.setAttribute('allowfullscreen', '');
+                    container.innerHTML = '';
+                    container.appendChild(iframe);
+                });
+            });
+        });
+    </script>
 </body>
 </html>
