--- a/gallery.html
+++ b/gallery.html
@@ -43,6 +43,10 @@
     <article class="article-gallery">
         <section>
             <div class="caja-imgs" id="gallery">
+                <img src="gallery/EricIG.webp" alt="Integrantes de HESS">
+                <img src="gallery/Hess 001.webp" alt="Integrantes de HESS">
+                <img src="gallery/Hess 003.webp" alt="Integrantes de HESS">
+                <img src="gallery/Hess 010.webp" alt="Integrantes de HESS">
                 <img src="gallery/HESS cuero 1.webp" alt="Integrantes de HESS">
                 <img src="gallery/HESS Gualeguaychu.webp" alt="Integrantes de HESS">
                 <img src="gallery/HESS Fabio Lione.webp" alt="Integrantes de HESS">
