--- a/gallery.html
+++ b/gallery.html
@@ -47,6 +47,7 @@
                 <img src="gallery/Hess 001.webp" alt="Integrantes de HESS">
                 <img src="gallery/Hess 003.webp" alt="Integrantes de HESS">
                 <img src="gallery/Hess 010.webp" alt="Integrantes de HESS">
+                <img src="gallery/HESSlogo.webp" alt="Logo HESS Heavy Metal">
                 <img src="gallery/HESS cuero 1.webp" alt="Integrantes de HESS">
                 <img src="gallery/HESS Gualeguaychu.webp" alt="Integrantes de HESS">
                 <img src="gallery/HESS Fabio Lione.webp" alt="Integrantes de HESS">
